<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.system.mrqin.superutils.activity.NotificationActivity">

    <include layout="@layout/toolbar" />

    <Button
        android:id="@+id/common_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/common_notification" />

    <Button
        android:id="@+id/long_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/long_notification" />

    <Button
        android:id="@+id/hanging_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/hanging_notification" />


</LinearLayout>
